--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,13 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-        
+
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /api-docs
+                
 #Setting the logging levels for the service
 logging:
   level:
