--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.scc</groupId>
-  <artifactId>enci-service</artifactId>
+  <artifactId>enci-dog-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Enci Service</name>
-  <description>Enci Service</description>
+  <name>Enci Dog Service</name>
+  <description>Enci Dog Service</description>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -120,7 +120,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<springfox-swagger.version>2.8.0</springfox-swagger.version>    
     <start-class>com.scc.enci.Application</start-class>    
-    <docker.image.name>anthonydenecheau/scc-enci-service</docker.image.name>
+    <docker.image.name>anthonydenecheau/scc-enci-dog-service</docker.image.name>
     <docker.image.tag>version1.0</docker.image.tag>
   </properties>
 
