--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:8-jdk-alpine
 RUN  apk update && apk upgrade && apk add netcat-openbsd
-RUN mkdir -p /usr/local/encidogservice
-ADD @project.build.finalName@.jar /usr/local/encidogservice/
+RUN mkdir -p /usr/local/dogservice
+ADD @project.build.finalName@.jar /usr/local/dogservice/
 ADD run.sh run.sh
 RUN chmod +x run.sh
 CMD ./run.sh
