--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,17 @@
         <artifactId>spring-cloud-sleuth-zipkin</artifactId>
     </dependency>
       
+    <!--Spring Cloud Stream Dependencies-->
+    <dependency>
+       <groupId>org.springframework.cloud</groupId>
+       <artifactId>spring-cloud-stream</artifactId>
+   </dependency>
+
+   <dependency>
+       <groupId>org.springframework.cloud</groupId>
+       <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+   </dependency>    
+         
     <!-- swagger -->
     <dependency>
         <groupId>io.springfox</groupId>
