--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,4 +57,5 @@ logging:
   level:
     com.netflix: WARN
     org.springframework.web: WARN
-    com.scc: DEBUG      
+    com.scc: DEBUG   
+    org.apache.kafka: WARN   
