--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,9 +53,10 @@ springfox:
         path: /api-docs
                 
 #Setting the logging levels for the service
-logging:
-  level:
-    com.netflix: WARN
-    org.springframework.web: WARN
-    com.scc: DEBUG   
-    org.apache.kafka: WARN   
+#Migrate to logstach and Cloud Config
+#logging:
+#  level:
+#    com.netflix: WARN
+#    org.springframework.web: WARN
+#    com.scc: DEBUG   
+#    org.apache.kafka: WARN   
