--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,19 @@
             </exclusion>
         </exclusions>
     </dependency>	
-    		              
+
+	<!-- Test -->
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+	</dependency> 
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+        		              
   </dependencies>
 
   <properties>
@@ -153,7 +165,7 @@
 	<springfox-swagger.version>2.8.0</springfox-swagger.version>    
     <start-class>com.scc.dog.Application</start-class>    
     <docker.image.name>anthonydenecheau/scc-dog-service</docker.image.name>
-    <docker.image.tag>version1.0</docker.image.tag>
+	<docker.image.tag>${env.BUILD_NAME}</docker.image.tag>
   </properties>
 
   <build>
